100% width on the bottom item in md; different title colors

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -13,13 +13,13 @@
 
 
 <section class="section section-lg-3 section-md-6 section-xs-12">
-	<div class="sectionTitle">Chicken</div>
+	<div class="sectionTitle sectionTitle1">Chicken</div>
 	<div><p class="contentText">Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text </p></div>
 </section>
 
 
-<section class="section section-lg-3 section-md-6 section-xs-12">
-	<div class="sectionTitle">Chicken</div>
+<section class="section section-lg-3 section-md-12 section-xs-12">
+	<div class="sectionTitle sectionTitle2">Chicken</div>
 	<div><p class="contentText">Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text Dummy text </p></div>
 </section>
 
